# $Id$

AM_CPPFLAGS = -I. -I$(top_srcdir)/utils/inc -I$(top_srcdir)/nessi

lib_LTLIBRARIES = libUtils.la

libUtils_la_LDFLAGS = -version-info 1:0:0

libUtils_la_SOURCES = \
	fd_comparison.cpp \
	fit_linear_background.cpp \
	fit_reflectometer_background.cpp \
	iu_comparison.cpp \
	matrix_multiplication.cpp \
	peak_integration.cpp
