# $Id$

AM_CPPFLAGS = -I. -I$(top_srcdir)/utils/inc -I$(top_srcdir)/nessi/inc

lib_LTLIBRARIES = libUtils.la

libUtils_la_LDFLAGS = $(LIB_UTILS_VERSION)

libUtils_la_SOURCES = \
	check_histo_sizes.hpp \
	check_histo_sizes.cpp \
	check_sizes_square.hpp \
	check_sizes_square.cpp \
	compare.hpp \
	compare.cpp \
	fit_linear_background.hpp \
	fit_linear_background.cpp \
	fit_reflectometer_background.hpp \
	fit_reflectometer_background.cpp \
	matrix_multiplication.hpp \
	matrix_multiplication.cpp \
	peak_integration.hpp \
	peak_integration.cpp \
	vector_comparison.hpp \
	vector_comparison.cpp \
	vector_is_equals.hpp \
	vector_is_equals.cpp
