# _*_ make _*_
# $Id$

AM_CPPFLAGS = -I. -I$(top_srcdir)/array_manip/inc

lib_LTLIBRARIES = libArrayManip.la

libArrayManip_la_LDFLAGS = -version-info 1:0:0

libArrayManip_la_SOURCES = \
        add_scalar_vec_ncerr.cpp \
        add_vec_vec_ncerr.cpp \
	check_sizes_2in1out.cpp \
        div_scalar_vec_ncerr.cpp \
        div_vec_scalar_ncerr.cpp \
        div_vec_vec_ncerr.cpp \
        mult_scalar_vec_ncerr.cpp \
        mult_vec_vec_ncerr.cpp \
        sub_scalar_vec_ncerr.cpp \
        sub_vec_vec_ncerr.cpp \
        sumw_vec_vec_ncerr.cpp
