# $Id$

AM_CPPFLAGS = -I. -I$(top_srcdir)/axis_manip/inc

lib_LTLIBRARIES = libAxisManip.la

libAxisManip_la_LDFLAGS = -version-info 1:0:0

libAxisManip_la_SOURCES = \
	d_spacing_to_tof_focused_det.cpp \
	energy_transfer.cpp \
	final_velocity_igs.cpp \
	frequency_to_angular_frequency.cpp \
	init_scatt_wavevector_to_Q.cpp \
	init_scatt_wavevector_to_scalar_Q.cpp \
	initial_velocity_dgs.cpp \
	rebin_axis_1D.cpp \
	rebin_axis_2D.cpp \
	rebin_axis_4D.cpp \
	reverse_array.cpp \
	reverse_array_nc.cpp \
	time_offset_dgs.cpp \
	tof_to_Q.cpp \
	tof_to_final_velocity_dgs.cpp \
	tof_to_initial_velocity_igs.cpp \
	tof_to_initial_wavelength_igs.cpp \
	tof_to_scalar_Q.cpp \
	tof_to_wavelength.cpp \
	velocity_to_energy.cpp \
	velocity_to_scalar_k.cpp \
	wavelength_to_d_spacing.cpp \
	wavelength_to_energy.cpp \
	wavelength_to_scalar_Q.cpp \
	wavelength_to_scalar_k.cpp \
	wavelength_to_tof.cpp 